starter-code/css/main.css
/*
Colors to use:
dark blue: #06365f
light blue: #1c5380
*/

.clearfix {
  clear: both;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

figure {
  height: fit-content;
  width: fit-content;
}

body {
  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.strong {
  font-weight: bold;
}

/* ----- MAIN CONTENT ----- */
#content-container {
  background-image: url("../images/bgtile.png");
  background-repeat: repeat-x;
  
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  padding-top: 115px;
}

#right-container {
  margin: 0 0 0 60px;
}

#top-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
  
  height: fit-content;
  width: 500px;
}

#login-button {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  align-items: center;
  
  padding: 5px;
  width: 100px;
  height: 40px;
  background-image: url("../images/bgtile.png");
  border: 0.5px solid #06365f;
  border-radius: 3px;
  color: white;
  font-size: 16px;
  cursor: pointer;
  box-shadow: 0px 0px 2px #06365f;
}

#frame-container {
  background-image: url(../images/frame.png);
  background-repeat: no-repeat;
  position: relative;
  justify-self: flex-end;
  margin-top: 20px;
  width: 505px;
  height: max-content;
  
  display: flex;
  flex-flow: wrap;
}


#frame-text {
  padding: 30px 50px 30px 40px;
}

#frame-text h1 {
  font-family: 'Source Sans Pro';
  color: #06365f;
  font-size: 1.9rem;
  line-height: 1.2em;
  margin-bottom: 18px;
  font-style: black;
}

#frame-text p {
  font-size: 0.95rem;
}

.store-buttons {
  position: relative;
  align-self: flex-end;
  margin: 0 10px;
  left: 27px;
}

#footer {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;

  padding: 55px 0;
  width: 80%;
  text-align: center;
}

#footer ul {
  list-style: none;
  width: max-content;
}

ul li {
  font-size: 0.8em;
  font-weight: bold;
  display: inline;
  margin: 0 10px;
  text-transform: uppercase;
}

ul a {
  text-decoration: none;
  color: #06365f;
}

#instagram-copy {
  width: max-content;
  color: #999;
  font-size: 0.8rem;
}

@media (max-width: 980px) {

  #content-container {
    padding: 55px;
  }

  #cellphone-container {
    display: none;
  }
  
  #right-container {
    margin: 20px auto;
  }
}

@media (max-width: 699px) {
  #footer ul {
    display: flex;
    flex-flow: column wrap;
    height: 50px;
    width: 400px;
  }
  
  #instagram-copy {
    width: 100%;
  }
  
  #footer {
    padding: 35px 0;
  }
}

@media (max-width: 550px) {
 
  #content-container {
    padding-top: 30px;
  }

  #footer ul {
    display: flex;
    flex-flow: column wrap;
    height: 70px;
    width: 300px;
  }

  #right-container {
    display: flex;
    flex-flow: row wrap;
    width: 80%;
  }

  #top-container {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
  }

  #logo-container {
    width: 85%; 
  }

  #logo-container img {
    width: 100%;
  }

  #login-button {
    width: 88%;
    justify-content: center;
  }

  #login-button img, p {
    margin: 0 10px 0 0;
  }


  #frame-container {
    width: 100%;
    background-size: 100% 100%;
  }

  #frame-container h1 {
    text-align: center;
  }

  #top-container {
    width: 90vw;
  }

  .store-buttons {
    width: 35%;
  }

  .store-buttons img {
    width: 100%;
  }
}

